--- a/Streaming-home/Style.css
+++ b/Streaming-home/Style.css
@@ -64,6 +64,9 @@ h3, p{
 
     body {
         background-color: #141414;
+        display: flex;
+        flex-direction: column;
+        
     }
     
     h1 {
@@ -85,6 +88,7 @@ h3, p{
         height: 170px;
         margin-left: 6px;
         box-sizing: border-box;   
+        border: none;
     }
 
     #profile {
@@ -100,6 +104,7 @@ h3, p{
 
     #profile {
         margin-left: 85vw;
+        box-sizing: border-box;
     }
 
     #banner {
@@ -122,6 +127,7 @@ h3, p{
     #Imagem-banner {
         width: 800px;
         height: 450px;
+        box-sizing: border-box;
     }
 
     #texto {
@@ -131,8 +137,9 @@ h3, p{
         margin-left: 15px;
     }
 
-    .filmes:hover, #Imagem-banner:hover{
+    .filmes:hover, #Imagem-banner:hover, #profile:hover{
         cursor: pointer;
+        border: 1px solid white;
     }
     
 }
