--- a/Streaming-home/Style.css
+++ b/Streaming-home/Style.css
@@ -3,9 +3,9 @@
     }
 
     body {
-       background-color: #141414;
+        background-color: #141414;
         display: flex;
-        flex-direction: column;
+        flex-direction: row;
         justify-content: center;
     }
     
@@ -26,7 +26,7 @@
     
     .movie {
         width: 320px;
-        height: 170px;
+        height: 250px;
         margin-left: 6px;
         box-sizing: border-box;   
         border: none;
@@ -43,11 +43,11 @@
         display: flex;
         flex-direction: row;
         background-color: #0f0f0f;
+        height: 50px;
     }
 
     #profile {
         margin-left: 85vw;
-        height: 45px;
         width: 45px;
         box-sizing: border-box;
     }
@@ -109,7 +109,7 @@
     
 
 
-@media (max-width: 2560px), (max-width: 1960px) {
+@media (max-width: 2560px) {
     * {
         font-family: sans-serif;
     }
@@ -215,9 +215,10 @@
         border: 1px solid white;
 }
 } 
+
 /*Eu estou usando o media pro site ficar responsivo porque a minha tela é beeem maior do que a tela do notebook*/
 
-@media (max-width: 1440px) {
+@media (max-width: 1440px), (max-width: 1920px) {
     * {
         font-family: sans-serif;
     }
@@ -325,6 +326,7 @@
     .movie:hover, #image-banner:hover, #profile:hover{
         cursor: pointer;
         border: 1px solid white;
+        transition: ease 0.6s;
     }
     
 }
